--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
    
    <!-- midtrans-->
    <script type="text/javascript"
-   src="https://app.sandbox.midtrans.com/snap/snap.js"
+   src="https://app.sandbox.midtrans.com/snap/v1/transactions"
    data-client-key="SB-Mid-client-IiRy8ifw5pmf0iDT"></script>
 </head>
 
